--- a/style.css
+++ b/style.css
@@ -103,3 +103,30 @@ p {
 .primary-buttons:hover {
     color: blue;
 }
+
+@media (max-width: 576px) {
+    h1 {
+        font-size: 48px;
+    }
+
+    h2 {
+        font-size: 32px;
+        text-align: center;
+    }
+
+    p {
+        text-align: center;
+    }
+
+    .img-fluid {
+        margin-bottom: 30px;
+    }
+}
+
+@media (max-width: 576px) {
+    .primary-buttons {
+            display: block;
+            text-align: center;
+            margin: 0 20px;
+        }
+}
